Minor changes (new README, assignment name, and updated environment))

--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -39,6 +39,8 @@
 \newcommand{\nexp}{{n}}
 \newcommand{\nf}{{p}}
 \newcommand{\vcd}{{\textbf{D}}}
+\newcommand{\relu} { \operatorname{ReLU} }
+\newcommand{\smx} { \operatorname{softmax} }
 
 \usepackage[hyperfootnotes=false]{hyperref}
 \hypersetup{
