--- a/tex/submission.tex
+++ b/tex/submission.tex
@@ -11,6 +11,7 @@
 % Please do not use the '<SCPD_SUBMISSION_TAG>' character anywhere within your code.  As expected,
 % that will confuse the regular expressions we use to identify your solution.
 \def\assignmentnum{2 }
+\def\assignmentname{Understanding and Implementing Word2Vec}
 \def\assignmenttitle{XCS224N Problem Set \assignmentnum}
 \input{macros}
 \begin{document}
