Added quiz to A2

--- a/tex/00-instructions/02-0-written-submission.tex
+++ b/tex/00-instructions/02-0-written-submission.tex
@@ -1,5 +1,5 @@
 {\bf Written Submission:}
-Some questions in this assignment require a written response.  For these questions, you should submit a PDF
+Some extra credit questions in this assignment require a written response.  For these questions, you should submit a PDF
 with your solutions online in the online student portal. As long as the PDF is legible and organized, the course
 staff has no preference between a handwritten and a typeset \LaTeX{} submission.
 If you wish to typeset your submission and are new to \LaTeX{}, you can get started with the following:
