--- a/tex/main.tex
+++ b/tex/main.tex
@@ -34,7 +34,11 @@
 
 \clearpage
 
-\input{03-appendix/00-main}
+\input{03-quiz/00-main}
+
+\clearpage
+
+\input{04-appendix/00-main}
 
 \clearpage
 
