--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -10,6 +10,7 @@
 \usepackage{bm}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{framed}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -39,6 +40,10 @@
 \newcommand{\nexp}{{n}}
 \newcommand{\nf}{{p}}
 \newcommand{\vcd}{{\textbf{D}}}
+\newcommand{\Int}{\mathbb{Z}}
+\newcommand\bb{\ensuremath{\mathbf{b}}}
+\newcommand\bs{\ensuremath{\mathbf{s}}}
+\newcommand\bp{\ensuremath{\mathbf{p}}}
 \newcommand{\relu} { \operatorname{ReLU} }
 \newcommand{\smx} { \operatorname{softmax} }
 \newcommand\bx{\ensuremath{\mathbf{x}}}
