--- a/tex/00-instructions/02-2-multifile-coding-submission.tex
+++ b/tex/00-instructions/02-2-multifile-coding-submission.tex
@@ -1,4 +1,2 @@
 {\bf Coding Submission:}
-Some questions in this assignment require a coding response.  For these questions, you should submit \textbf{all files indicated in the question} to the online student portal.  Your code will be autograded online using |src/grader.py|, which is provided for you in the |src/|
-subdirectory. You can also run this autograder on your local computer, although some of the tests will be skipped (since they
-require the instructor solution code for comparison).
+Some questions in this assignment require a coding response.  For these questions, you should submit \textbf{all files indicated in the question} to the online student portal.  For further details, see Writing Code and Running the Autograder below.
