--- a/tex/02-coding-word2vec/00-main.tex
+++ b/tex/02-coding-word2vec/00-main.tex
@@ -5,7 +5,7 @@ In this part you will implement the word2vec model and train your own word vecto
 
 \begin{enumerate}[(a)]
     % Question 1-A
-    \item \points{2a} First, implement the |sigmoid()| function in \texttt{src/submission.py} to apply the sigmoid function to an input vector. In the same file, fill in the implementation for the |naive\_softmax\_loss\_and\_gradient()| function. Then, fill in the implementation of the loss and gradient functions for the skip-gram model (|skipgram()|).\newline
+    \item \points{2a} First, implement the |sigmoid()| function in \texttt{src-word2vec/submission.py} to apply the sigmoid function to an input vector. In the same file, fill in the implementation for the |naive_softmax_loss_and_gradient()| function. Then, fill in the implementation of the loss and gradient functions for the skip-gram model (|skipgram()|).\newline
     To complete these steps you will need to refer to Sections 2 and 3, Equations (3) and (6).\newline
     
     \textbf{Pseudo code for skip-gram}
@@ -30,7 +30,7 @@ In this part you will implement the word2vec model and train your own word vecto
     \end{algorithm}
 
     % Question 1-B
-    \item \points{2b} Complete the implementation for your SGD optimizer in the |sgd()| function in |src/submission.py|.
+    \item \points{2b} Complete the implementation for your SGD optimizer in the |sgd()| function in |src-word2vec/submission.py|.
     
     % Question 1-C
     \item \points{2c} Show time! Now we are going to load some real data and train word vectors with everything you just implemented! We are going to use the Stanford Sentiment Treebank (SST) dataset to train word vectors, and later apply them to a simple sentiment analysis task. There is no additional code to write for this part; just run \texttt{python run.py}.
@@ -39,7 +39,7 @@ In this part you will implement the word2vec model and train your own word vecto
 
     %\emph{Additional Note: Although you have implemented the naive\_softmax\_loss\_and\_gradient function, to make sure that the code converges faster do not forget to switch the loss function to neg\_sampling\_loss\_and\_gradient (the implementation for this has been provided in \textbf{word2vec.py}) in the function call for \textbf{sgd(**kwargs)} in the file \textbf{run.py}}
     
-    After 40,000 iterations, the script will finish and a visualization for your word vectors will appear. It will also be saved as \texttt{word\_vectors.png} and the corresponding wordvectors as \texttt{sample\_vectors\_soln.json} in your project directory.
+        After 40,000 iterations, the script will finish and a visualization for your word vectors will appear. It will also be saved as \texttt{word\_vectors.png} and the corresponding wordvectors as \texttt{sample\_vectors\_(soln).json} in your project directory.
 
-    \textbf{You must upload the generated \texttt{sample\_vectors\_soln.json} along with \texttt{src/submission.py} to achieve full credit.}
+        \textbf{You must upload the generated \texttt{sample\_vectors\_(soln).json} along with \texttt{src-word2vec/submission.py} to achieve full credit.}
 \end{enumerate}
