--- a/tex/03-quiz/00-main.tex
+++ b/tex/03-quiz/00-main.tex
@@ -1,34 +1,37 @@
 \section{Quiz}
 
-This remainder of this homework is a series of multiple choice questions related to the word2vec algorithm.
+This remainder of this homework is a series of multiple choice questions related to the word2vec algorithm. Please input your answers into the Gradescope Online Assessment |A2 Online Assessment|.
 
-{\bf How to submit:}  Even though these are not coding questions, you will submit your response to
-each question in the |src-quiz/submission.py| file.  This file will act as
-your 'bubble sheet' for multiple choice questions in this course.  A sample response
-might look like this:
+% ONLY UNCOMMENT WHEN GRADESCOPE ONLINE ASSESSMENT FEATURE IS DOWN
+% {\bf How to submit:}  Even though these are not coding questions, you will submit your response to
+% each question in the |src-quiz/submission.py| file.  This file will act as
+% your 'bubble sheet' for multiple choice questions in this course.  A sample response
+% might look like this:
 
-\begin{center}
-\includegraphics[width=1\textwidth]{sample_question_empty.png}
-\end{center}
+% \begin{center}
+% \includegraphics[width=1\textwidth]{sample_question_empty.png}
+% \end{center}
 
-If you believe that |a| and |b| are the correct responses to this question, you
-will type |response = [`a', `b']| between the indicated lines like this:
+% If you believe that |a| and |b| are the correct responses to this question, you
+% will type |response = [`a', `b']| between the indicated lines like this:
 
-\begin{center}
-\includegraphics[width=1\textwidth]{sample_question_complete.png}
-\end{center}
+% \begin{center}
+% \includegraphics[width=1\textwidth]{sample_question_complete.png}
+% \end{center}
 
-{\bf How to verify your submission:}
-You can run the student version of the autograder locally like all coding
-problem sets.  In the case of this problem set, the helper tests will verify
-that your responses are within the set of possible choices for each question
-(e.g. the helper functions will flag if you forget to answer a question of if
-you respond with |[`a', `d']| when the choices are |[`a', `b', `c']|.)  See the
-front pages of this assignment for instructions to run the autograder.
-\clearpage
+% {\bf How to verify your submission:}
+% You can run the student version of the autograder locally like all coding
+% problem sets.  In the case of this problem set, the helper tests will verify
+% that your responses are within the set of possible choices for each question
+% (e.g. the helper functions will flag if you forget to answer a question of if
+% you respond with |[`a', `d']| when the choices are |[`a', `b', `c']|.)  See the
+% front pages of this assignment for instructions to run the autograder.
+% \clearpage
 
 \begin{enumerate}[1.]
-\item \points{quiz1}
+\item \points{1quiz}
+Please input answer to question 1 of the Gradescope online assessment |A2 Online Assessment|.
+
 Choose all the equations that represent the differential of a sigmoid (When choosing the right option(s) consider the given input x to be a scalar instead of a vector).
 \begin{enumerate}[(a)]
 \item \begin{equation*}\frac{\partial \sigma(x)}{\partial x} = {\sigma(x) \cdot (1-\sigma(x))}\end{equation*}
@@ -40,7 +43,9 @@ Choose all the equations that represent the differential of a sigmoid (When choo
 % ### START CODE HERE ###
 % ### END CODE HERE ###
 
-\item \points{quiz2}
+\item \points{2quiz}
+Please input answer to question 2 of the Gradescope online assessment |A2 Online Assessment|.
+
 What is the shape of the matrices U and V where (please refer to reading material from the handout):
 
 $U$ is the outside vector matrix
@@ -61,7 +66,9 @@ $V$ is center vector matrix
 % ### START CODE HERE ###
 % ### END CODE HERE ###
 
-\item \points{quiz3}
+\item \points{3quiz}
+Please input answer to question 3 of the Gradescope online assessment |A2 Online Assessment|.
+
 What is the shape of the gradient $\frac{\partial J_\text{naive-softmax}}{\partial V_c}$ matrix/vector where:
 \begin{equation*} J_{\text{naive-softmax}}(\bm v_c, o, \bm U) = - \bm u_{o}^\top \bm v_c + \log \bigg( \sum_{w' \in \text{Vocab}} \exp(\bm u_{w'}^\top \bm v_c) \bigg) \end{equation*}
 
@@ -86,7 +93,9 @@ $y$ is the actual output
 % ### START CODE HERE ###
 % ### END CODE HERE ###
 
-\item \points{quiz4}
+\item \points{4quiz}
+Please input answer to question 4 of the Gradescope online assessment |A2 Online Assessment|.
+
 What is the shape of the gradient $\frac{\partial J_\text{naive-softmax}}{\partial U}$ (will be referred to $\frac{\partial J}{\partial U}$ for simplicity) matrix/vector where:
 
 \begin{equation*} J_{\text{naive-softmax}}(\bm v_c, o, \bm U) = - \bm u_{o}^\top \bm v_c + \log \bigg( \sum_{w' \in \text{Vocab}} \exp(\bm u_{w'}^\top \bm v_c) \bigg) \end{equation*}
@@ -112,7 +121,9 @@ $y$ is the actual output
 % ### START CODE HERE ###
 % ### END CODE HERE ###
 
-\item \points{quiz5}
+\item \points{5quiz}
+Please input answer to question 5 of the Gradescope online assessment |A2 Online Assessment|.
+
 Which of the below equations represents a general form of SGD where $g(x)$ is the gradient of loss function and $\eta$ is the learning rate:
 
 \begin{enumerate}[(a)]
@@ -125,7 +136,9 @@ Which of the below equations represents a general form of SGD where $g(x)$ is th
 % ### START CODE HERE ###
 % ### END CODE HERE ###
 
-\item \points{quiz6}
+\item \points{6quiz}
+Please input answer to question 6 of the Gradescope online assessment |A2 Online Assessment|.
+
 Negative sampling was briefly introduced the Lecture 2 video Word2Vec: Model Variants. \href{https://stackoverflow.com/questions/27860652/word2vec-negative-sampling-in-layman-term#answer-27864657}{Here} and \href{https://www.quora.com/What-is-negative-sampling}{here} you can find more written information about negative sampling. 
 
 In skip-gram Word2Vec you have two ways of calculating the gradients. Namely, naive softmax and negative sampling. The goal of skip-gram Word2Vec is to accurately learn the representation of the conditional probability distribution(below is the equation):
