Adding notational fixes for problem 3

--- a/tex/03-quiz/00-main.tex
+++ b/tex/03-quiz/00-main.tex
@@ -127,10 +127,10 @@ Please input answer to question 5 of the Gradescope online assessment |A2 Online
 Which of the below equations represents a general form of SGD where $g(x)$ is the gradient of loss function and $\eta$ is the learning rate:
 
 \begin{enumerate}[(a)]
-\item \begin{equation*}x = {x - eta \cdot g(x)}\end{equation*}
-\item \begin{equation*}x = {x - eta \cdot \frac{\partial g(x)}{\partial x}}\end{equation*}
-\item \begin{equation*}x = {x - \frac{eta}{g(x)}}\end{equation*}
-\item \begin{equation*}x = {x - eta \cdot {\frac{\partial x}{\partial g(x)}}}\end{equation*}
+\item \begin{equation*}x = {x - \eta \cdot g(x)}\end{equation*}
+\item \begin{equation*}x = {x - \eta \cdot \frac{\partial g(x)}{\partial x}}\end{equation*}
+\item \begin{equation*}x = {x - \frac{\eta}{g(x)}}\end{equation*}
+\item \begin{equation*}x = {x - \eta \cdot {\frac{\partial x}{\partial g(x)}}}\end{equation*}
 \end{enumerate}
 
 % ### START CODE HERE ###
